Clean up ignored files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 
 {% include experience-section.html %}
 
-{% include education-section.html %}
+<!-- {% include education-section.html %} -->
 
 {% include services-section.html %}
 
