better header on frontpage

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -26,6 +26,8 @@ title: Portfolio
           <img src="{{ site.baseurl }}/{{ item.image }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
+              <h4 class="text-white">{{ item.name }}</h4>
+              <br>
               <a class="btn btn-light btn-sm" href="{{ item.url }}">view project</a>
             </div>
           </div>
