--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -21,14 +21,15 @@ title: Portfolio
     </div>
     <div class="row shuffle-wrapper">
       {% for item in site.data.settings.portfolio-items %}
-      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[{% for portfolio in item.portfolio-type %}{% if forloop.first == true %}{% else %},{% endif %}&quot;{{ portfolio.type }}&quot;{% endfor %}]">
+      <div class="col-lg-4 col-6 mb-4 shuffle-item"
+        data-groups="[{% for portfolio in item.portfolio-type %}{% if forloop.first == true %}{% else %},{% endif %}&quot;{{ portfolio.type }}&quot;{% endfor %}]">
         <div class="position-relative rounded hover-wrapper">
           <img src="{{ site.baseurl }}/{{ item.image }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
           <div class="hover-overlay">
             <div class="hover-content">
-              <h4 class="text-white">{{ item.name }}</h4>
-              <br>
-              <a class="btn btn-light btn-sm" href="{{ item.url }}">view project</a>
+              <h5 class="text-white transparent-text">{{ item.year }}<h5>
+                  <h4 class="text-white mb-20">{{ item.name }}</h4>
+                  <a class="btn btn-light btn-sm" href="{{ item.url }}">view project</a>
             </div>
           </div>
         </div>
@@ -38,16 +39,3 @@ title: Portfolio
   </div>
 </section>
 <!-- /portfolio -->
-
-<!-- clients -->
-<section class="section bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h2 class="section-title">My Clients</h2>
-      </div>
-    </div>
-    {% include client-slider.html %}
-  </div>
-</section>
-<!-- /clients -->
