--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -31,7 +31,7 @@ title: Projects
           {% endif %}
           <div class="hover-overlay">
             <div class="hover-content">
-              <h4 class="text-white mb-10 mt-3">{{ item.name }}</h4>
+              <h4 class="text-white mb-10 mt-3 ml-3 mr-3">{{ item.name }}</h4>
             </div>
           </div>
         </div>
